--- a/docquyen.html
+++ b/docquyen.html
@@ -12,9 +12,9 @@
     <header>
         <div class="logo">FAIR GAME</div>
         <nav>
-            <a href="index.html" class="active">Trang chủ</a>
+            <a href="index.html">Trang chủ</a>
             
-            <a href="docquyen.html">Game độc quyền</a>
+            <a href="docquyen.html" class="active">Game độc quyền</a>
             <a href="aboutus.html">About us</a>
         </nav>
         <div class="cart-icon" onclick="toggleCart()">
@@ -64,30 +64,6 @@
                 <p class="genre">Adventure</p>
                 <p class="price">Free</p>
                 <button onclick="addToCart('Bunny Adventure', 0, 'images/bunny.png')">Thêm vào giỏ hàng</button>
-            </div>
-
-            <div class="product-card">
-                <img src="images/pubg.jpg" alt="PUBG Mobile">
-                <h3>PUBG Mobile</h3>
-                <p class="genre">Shooter</p>
-                <p class="price">Free</p>
-                <button onclick="addToCart('PUBG Mobile', 0, 'images/pubg.jpg')">Thêm vào giỏ hàng</button>
-            </div>
-
-            <div class="product-card">
-                <img src="images/eden-ring.jpg" alt="Elden Ring">
-                <h3>Elden Ring</h3>
-                <p class="genre">RPG / Souls</p>
-                <p class="price" style="color: #e74c3c;">$59.99</p>
-                <button onclick="addToCart('Elden Ring', 59.99, 'images/eden-ring.jpg')">Thêm vào giỏ hàng</button>
-            </div>
-
-            <div class="product-card">
-                <img src="images/freefire.jpg" alt="FreeFire">
-                <h3>FreeFire</h3>
-                <p class="genre">Survival Shooter</p>
-                <p class="price">Free</p>
-                <button onclick="addToCart('FreeFire', 0, 'images/freefire.jpg')">Thêm vào giỏ hàng</button>
             </div>
 
              <div class="product-card">
