--- a/games/game1.html
+++ b/games/game1.html
@@ -65,8 +65,8 @@
         <div class="logo">FAIR GAME</div>
         <nav>
             <a href="../index.html">Trang chủ</a>
-            <a href="#">Game độc quyền</a>
-            <a href="#">About us</a>
+            <a href="../docquyen.html">Game độc quyền</a>
+            <a href="../aboutus.html">About us</a>
         </nav>
         <div class="cart-icon" onclick="toggleCart()">
             <i class="fas fa-shopping-cart"></i>
