--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <nav>
             <a href="index.html" class="active">Trang chủ</a>
             
-            <a href="docquyen.html">Game độc quyền</a>
-            <a href="aboutus.html">About us</a>
+            <a href="docquyen.html" target="_blank">Game độc quyền</a>
+            <a href="aboutus.html" target="_blank">About us</a>
+
         </nav>
         <div class="cart-icon" onclick="toggleCart()">
             <i class="fas fa-shopping-cart"></i>
@@ -45,7 +46,7 @@
         <div class="product-grid">
             
             <div class="product-card">
-                <a href="games/game1.html">
+                <a href="games/game1.html" target="_blank">
                     <img src="images/slayer.png" alt="Ace Slayer">
                 </a>
                 <h3>Ace Slayer</h3>
@@ -56,7 +57,7 @@
 
             <div class="product-card">
 
-                <a href="games/game2.html">
+                <a href="games/game2.html" target="_blank">
                     <img src="images/bunny.png" alt="Bunny Adventure">
                 </a>
 
