Add Firebase config

--- a/index.html
+++ b/index.html
@@ -147,4 +147,25 @@
 
     <script src="script.js"></script>
 </body>
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+  import { getAuth } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+  import { getDatabase } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyA7YRuDHYvWx5FJa7emMmEmZpbSbuCjTgA",
+    authDomain: "fair-games-8769a.firebaseapp.com",
+    projectId: "fair-games-8769a",
+    storageBucket: "fair-games-8769a.firebasestorage.app",
+    messagingSenderId: "984853931454",
+    appId: "1:984853931454:web:6aac722bfe1a24d53f05ef"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const database = getDatabase(app);
+
+  console.log("🔥 Firebase đã kết nối thành công");
+</script>
+
 </html>
