Fix HTML formatting and add missing newline

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="logo">FAIR GAME</div>
         <nav>
             <a href="index.html" class="active">Trang chủ</a>
-            <a href="docquyen.html" target="_blank">Game độc quyền</a>
-            <a href="aboutus.html" target="_blank">About us</a>
+            <a href="docquyen.html">Game độc quyền</a>
+            <a href="aboutus.html">About us</a>
         </nav>
 
         <div class="header-right">
@@ -198,4 +198,5 @@
     <script type="module" src="auth.js"></script>
     <script type="module" src="script.js"></script>
 </body>
+
 </html>
