--- a/login.html
+++ b/login.html
@@ -2,9 +2,15 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng nhập | Fair Games</title>
-    <link rel="stylesheet" href="auth.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="auth.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
@@ -14,18 +20,33 @@
 
         <p id="authMessage"></p>
 
-        <input type="email" id="email" placeholder="Email">
-        <input type="password" id="password" placeholder="Mật khẩu">
+        <input type="email" id="email" placeholder="Email của bạn...">
+        <input type="password" id="password" placeholder="Mật khẩu...">
 
-        <button id="submitBtn">Đăng nhập</button>
+        <button id="submitBtn">
+            <i class="fas fa-sign-in-alt"></i> Đăng nhập
+        </button>
 
         <p class="switch">
             <span id="switchText">Chưa có tài khoản?</span>
             <span id="switchBtn">Đăng ký ngay</span>
         </p>
+
+        <a href="index.html" class="home-link">
+            <i class="fas fa-arrow-left"></i> Quay lại Trang chủ
+        </a>
     </div>
 </div>
 
 <script type="module" src="auth.js"></script>
+
+<script>
+    document.addEventListener('keydown', function(event) {
+        if (event.key === 'Enter') {
+            document.getElementById('submitBtn').click();
+        }
+    });
+</script>
+
 </body>
 </html>
