--- a/docquyen.html
+++ b/docquyen.html
@@ -76,7 +76,9 @@
 
              <div class="product-card reveal">
                 <div class="card-img-wrapper">
-                    <img src="images/earth2130.png" alt="Earth 2130">
+                    <a href="games/game6.html">
+                        <img src="images/earth2130.png" alt="Earth 2130">
+                    </a>
                 </div>
                 <h3>Earth 2130</h3>
                 <p class="genre">Sci-Fi Strategy</p>
@@ -86,7 +88,9 @@
 
             <div class="product-card reveal">
                 <div class="card-img-wrapper">
-                    <img src="images/ufo.png" alt="UFO Attack">
+                    <a href="games/game7.html">
+                        <img src="images/ufo.png" alt="UFO Attack">
+                    </a>
                 </div>
                 <h3>UFO Attack</h3>
                 <p class="genre">Arcade</p>
@@ -96,7 +100,9 @@
 
             <div class="product-card reveal">
                 <div class="card-img-wrapper">
-                    <img src="images/apple.png" alt="Apple Collector">
+                    <a href="games/game8.html">
+                        <img src="images/apple.png" alt="Apple Collector">
+                    </a>
                 </div>
                 <h3>Apple Collector</h3>
                 <p class="genre">Casual</p>
