--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="product-card reveal">
                 <div class="badge hot">HOT</div>
                 <div class="card-img-wrapper">
-                    <a href="games/game1.html" target="_blank">
+                    <a href="games/game1.html">
                         <img src="images/slayer.png" alt="Ace Slayer">
                     </a>
                 </div>
@@ -65,7 +65,7 @@
 
             <div class="product-card reveal">
                 <div class="card-img-wrapper">
-                    <a href="games/game2.html" target="_blank">
+                    <a href="games/game2.html">
                         <img src="images/bunny.png" alt="Bunny Adventure">
                     </a>
                 </div>
@@ -77,7 +77,9 @@
 
             <div class="product-card reveal">
                 <div class="card-img-wrapper">
-                    <img src="images/pubg.jpg" alt="PUBG Mobile">
+                    <a href="games/game3.html">
+                        <img src="images/pubg.jpg" alt="PUBG Mobile">
+                    </a>
                 </div>
                 <h3>PUBG Mobile</h3>
                 <p class="genre">Shooter</p>
@@ -88,7 +90,9 @@
             <div class="product-card reveal">
                 <div class="badge new">NEW</div>
                 <div class="card-img-wrapper">
-                    <img src="images/eden-ring.jpg" alt="Elden Ring">
+                    <a href="games/game4.html">
+                        <img src="images/eden-ring.jpg" alt="Elden Ring">
+                    </a>
                 </div>
                 <h3>Elden Ring</h3>
                 <p class="genre">RPG / Souls</p>
@@ -98,7 +102,9 @@
 
             <div class="product-card reveal">
                 <div class="card-img-wrapper">
-                    <img src="images/freefire.jpg" alt="FreeFire">
+                    <a href="games/game5.html">
+                        <img src="images/freefire.jpg" alt="FreeFire">
+                    </a>
                 </div>
                 <h3>FreeFire</h3>
                 <p class="genre">Survival Shooter</p>
@@ -108,7 +114,9 @@
 
             <div class="product-card reveal">
                 <div class="card-img-wrapper">
-                    <img src="images/earth2130.png" alt="Earth 2130">
+                    <a href="games/game6.html">
+                        <img src="images/earth2130.png" alt="Earth 2130">
+                    </a>
                 </div>
                 <h3>Earth 2130</h3>
                 <p class="genre">Sci-Fi Strategy</p>
@@ -118,7 +126,9 @@
 
             <div class="product-card reveal">
                 <div class="card-img-wrapper">
-                    <img src="images/ufo.png" alt="UFO Attack">
+                    <a href="games/game7.html">
+                        <img src="images/ufo.png" alt="UFO Attack">
+                    </a>
                 </div>
                 <h3>UFO Attack</h3>
                 <p class="genre">Arcade</p>
@@ -128,7 +138,9 @@
 
             <div class="product-card reveal">
                 <div class="card-img-wrapper">
-                    <img src="images/apple.png" alt="Apple Collector">
+                    <a href="games/game8.html">
+                        <img src="images/apple.png" alt="Apple Collector">
+                    </a>
                 </div>
                 <h3>Apple Collector</h3>
                 <p class="genre">Casual</p>
