--- a/profile.html
+++ b/profile.html
@@ -62,14 +62,16 @@
             display: flex; justify-content: space-between; border-bottom: 1px solid #333;
             padding-bottom: 10px; margin-bottom: 15px; font-size: 0.9em; color: #888;
         }
-        .game-list { display: flex; flex-wrap: wrap; gap: 15px; }
+        .game-list { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 20px; }
         .purchased-game {
             display: flex; align-items: center; background: #252525;
-            padding: 10px; border-radius: 5px; border: 1px solid #444; width: 100%;
+            padding: 16px 18px; border-radius: 10px; border: 1px solid #444; width: 100%; gap: 18px;
+            min-height: 110px;
         }
-        .purchased-game img { width: 50px; height: 50px; object-fit: cover; border-radius: 4px; margin-right: 15px; }
-        .game-info h4 { margin: 0; font-size: 16px; color: white; }
-        .game-info p { margin: 0; color: #e74c3c; font-size: 14px; }
+        .purchased-game img { width: 100px; height: 80px; object-fit: cover; border-radius: 6px; margin: 0; }
+        .game-info h4 { margin: 0 0 6px 0; font-size: 1.5rem; color: white; }
+        .game-info p { margin: 0; color: #e74c3c; font-size: 1.1rem; font-weight: 700; }
+        .purchased-game button { padding: 8px 14px; font-size: 0.95rem; }
         
         #loading { text-align: center; color: #888; margin-top: 50px; }
 
