--- a/profile.html
+++ b/profile.html
@@ -265,7 +265,7 @@
                         }
                         const orderCard = `
                             <div class="order-card">
-                                <div class="order-header"><span>Ngày mua: ${order.date}</span><span style="color:#e74c3c;">Tổng: $${order.total.toFixed(2)}</span></div>
+                                <div class="order-header"><span>Ngày mua: ${order.date}</span></div>
                                 <div class="game-list">${gamesHtml}</div>
                             </div>`;
                         container.innerHTML += orderCard;
