--- a/games/game9.html
+++ b/games/game9.html
@@ -62,7 +62,7 @@
 
     <div class="game-detail-wrapper">
         <div class="top-section">
-            <img src="../images/monster-hunter.jpg" alt="Monster Hunter" class="detail-img">
+            <img src="../images/monsterhunter.avif" alt="Monster Hunter game cover featuring a armored hunter wielding a large sword, facing off against a massive winged monster in a dramatic rocky landscape with stormy skies, conveying an epic and intense action-adventure atmosphere" class="detail-img">
             <div class="detail-info">
                 <h1>Monster Hunter</h1>
                 <p style="color:#888; font-style: italic;">Thể loại: Action / Co-op</p>
