--- a/index.html
+++ b/index.html
@@ -148,6 +148,54 @@
                 <button onclick="addToCart('Apple Collector', 0, 'images/apple.png')">Thêm vào giỏ</button>
             </div>
 
+            <div class="product-card reveal">
+                <div class="card-img-wrapper">
+                    <a href="games/game9.html">
+                        <img src="images/monsterhunter.avif" alt="Monster Hunter">
+                    </a>
+                </div>
+                <h3>Monster Hunter</h3>
+                <p class="genre">Action / Co-op</p>
+                <p class="price" style="color: #e74c3c;">$29.99</p>
+                <button onclick="addToCart('Monster Hunter', 29.99, 'images/monster-hunter.jpg')">Thêm vào giỏ</button>
+            </div>
+
+            <div class="product-card reveal">
+                <div class="card-img-wrapper">
+                    <a href="games/game10.html">
+                        <img src="images/residentevil4.webp" alt="Resident Evil">
+                    </a>
+                </div>
+                <h3>Resident Evil</h3>
+                <p class="genre">Survival / Horror</p>
+                <p class="price" style="color: #e74c3c;">$29.99</p>
+                <button onclick="addToCart('Resident Evil', 29.99, 'images/residentevil4.webp')">Thêm vào giỏ</button>
+            </div>
+            
+                <div class="product-card reveal">
+                    <div class="card-img-wrapper">
+                        <a href="games/game11.html">
+                            <img src="images/ark.webp" alt="ARK: Survival Evolved">
+                        </a>
+                    </div>
+                    <h3>ARK: Survival Ascended</h3>
+                    <p class="genre">Survival / Open World</p>
+                    <p class="price" style="color: #e74c3c;">$19.99</p>
+                    <button onclick="addToCart('ARK: Survival Ascended', 19.99, 'images/ark.webp')">Thêm vào giỏ</button>
+                </div>
+
+            <div class="product-card reveal">
+                <div class="card-img-wrapper">
+                    <a href="games/game12.html">
+                        <img src="images/minecraft.jpg" alt="Minecraft">
+                    </a>
+                </div>
+                <h3>Minecraft</h3>
+                <p class="genre">Sandbox / Creative</p>
+                <p class="price" style="color: #e74c3c;">$26.99</p>
+                <button onclick="addToCart('Minecraft', 26.99, 'images/minecraft.jpg')">Thêm vào giỏ</button>
+            </div>
+
         </div>
     </div>
 
