--- a/profile.html
+++ b/profile.html
@@ -62,6 +62,9 @@
             display: flex; justify-content: space-between; border-bottom: 1px solid #333;
             padding-bottom: 10px; margin-bottom: 15px; font-size: 0.9em; color: #888;
         }
+        .order-header .order-date {
+            color: #fff; font-weight: 700; font-size: 1rem;
+        }
         .game-list { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 20px; }
         .purchased-game {
             display: flex; align-items: center; background: #252525;
@@ -265,7 +268,7 @@
                         }
                         const orderCard = `
                             <div class="order-card">
-                                <div class="order-header"><span>Ngày mua: ${order.date}</span></div>
+                                <div class="order-header"><span class="order-date">Ngày mua: ${order.date}</span></div>
                                 <div class="game-list">${gamesHtml}</div>
                             </div>`;
                         container.innerHTML += orderCard;
