--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <h3>Monster Hunter</h3>
                 <p class="genre">Action / Co-op</p>
                 <p class="price" style="color: #e74c3c;">$29.99</p>
-                <button onclick="addToCart('Monster Hunter', 29.99, 'images/monster-hunter.jpg')">Thêm vào giỏ</button>
+                <button onclick="addToCart('Monster Hunter', 29.99, 'images/monsterhunter.avif')">Thêm vào giỏ</button>
             </div>
 
             <div class="product-card reveal">
