fix bugs in library

--- a/profile.html
+++ b/profile.html
@@ -65,7 +65,7 @@
         .order-header .order-date {
             color: #fff; font-weight: 700; font-size: 1rem;
         }
-        .game-list { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 20px; }
+        .game-list { display: flex; flex-direction: column; gap: 20px; }
         .purchased-game {
             display: flex; align-items: center; background: #252525;
             padding: 16px 18px; border-radius: 10px; border: 1px solid #444; width: 100%; gap: 18px;
