fix rating bugs

--- a/games/game10.html
+++ b/games/game10.html
@@ -100,8 +100,25 @@
         const ratingValueInput = document.getElementById('ratingValue');
         const ratingText = document.getElementById('ratingText');
         const ratingLabels = ["Rất tệ","Tệ","Bình thường","Tốt","Tuyệt vời"];
-        stars.forEach((star, index)=>{ star.addEventListener('click', ()=>{ ratingValueInput.value = index+1; ratingText.innerText = ratingLabels[index]; ratingText.style.color = '#f1c40f'; }); });
-        document.getElementById('btnSubmitReview')?.addEventListener('click', ()=>{ if(!currentUser) return; const comment = document.getElementById('inputComment').value.trim(); const starsSelected = parseInt(ratingValueInput.value); if(comment==="") { alert('Vui lòng nhập nội dung!'); return; } if(starsSelected===0){ alert('Vui lòng chọn số sao!'); return;} push(ref(db, 'reviews/' + GAME_ID), { user: currentUser.email, stars: starsSelected, content: comment, createdAt: new Date().toLocaleString('vi-VN') }).then(()=>{ document.getElementById('inputComment').value=''; ratingValueInput.value=0; alert('Đã gửi đánh giá!'); }).catch(()=>{}); });
+
+        function highlightStars(count) {
+            stars.forEach((s, i) => {
+                if (i < count) { s.classList.add('selected'); s.style.color = '#f1c40f'; }
+                else { s.classList.remove('selected'); s.style.color = '#444'; }
+            });
+        }
+
+        stars.forEach((star, index) => {
+            star.addEventListener('click', () => {
+                ratingValueInput.value = index + 1;
+                highlightStars(index + 1);
+                ratingText.innerText = ratingLabels[index];
+                ratingText.style.color = '#f1c40f';
+            });
+            star.addEventListener('mouseover', () => { highlightStars(index + 1); });
+            star.addEventListener('mouseout', () => { const current = parseInt(ratingValueInput.value) || 0; highlightStars(current); });
+        });
+        document.getElementById('btnSubmitReview')?.addEventListener('click', ()=>{ if(!currentUser) return; const comment = document.getElementById('inputComment').value.trim(); const starsSelected = parseInt(ratingValueInput.value); if(comment==="") { alert('Vui lòng nhập nội dung!'); return; } if(starsSelected===0){ alert('Vui lòng chọn số sao!'); return;} push(ref(db, 'reviews/' + GAME_ID), { user: currentUser.email, stars: starsSelected, content: comment, createdAt: new Date().toLocaleString('vi-VN') }).then(()=>{ document.getElementById('inputComment').value=''; ratingValueInput.value=0; highlightStars(0); ratingText.innerText = 'Chưa chọn sao'; ratingText.style.color = '#888'; alert('Đã gửi đánh giá!'); }).catch(()=>{}); });
         const reviewsRef = ref(db,'reviews/'+GAME_ID); onValue(reviewsRef, (snapshot)=>{ const list = document.getElementById('reviewList'); list.innerHTML=''; if(snapshot.exists()){ const reviews = Object.values(snapshot.val()).reverse(); reviews.forEach(review=>{ const starString = '★'.repeat(review.stars) + '☆'.repeat(5-review.stars); const avatarChar = review.user.charAt(0).toUpperCase(); list.innerHTML += `<div class="review-card"><div class="user-header"><div style="display:flex;align-items:center;gap:10px;"><div style="width:30px;height:30px;background:#333;border-radius:50%;display:flex;align-items:center;justify-content:center;color:#e74c3c;font-weight:bold;">${avatarChar}</div><span class="username">${review.user}</span></div><span class="rating">${starString}</span></div><span class="review-date">${review.createdAt}</span><p class="review-text">${review.content}</p></div>`; }); } else { list.innerHTML = "<p style='color:#666;text-align:center'>Chưa có đánh giá nào.</p>"; } });
     </script>
     <script type="module" src="../firebase.js"></script>
