--- a/games/game5.html
+++ b/games/game5.html
@@ -93,9 +93,10 @@
     <script type="module">
         import { auth, db } from "../firebase.js";
         import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-        import { ref, push, onValue, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
+        // 👇 Thêm 'get' vào dòng import này để lấy dữ liệu avatar
+        import { ref, push, onValue, get } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
-        // !!! QUAN TRỌNG: ID CỦA GAME 4
+        // !!! QUAN TRỌNG: ID CỦA GAME (Nhớ sửa dòng này khi copy sang game khác)
         const GAME_ID = 'game5_reviews'; 
 
         let currentUser = null;
@@ -114,57 +115,32 @@
             }
         });
 
-        // 2. LOGIC NGÔI SAO (ĐÃ SỬA LỖI TÔ MÀU + THÊM HOVER)
+        // 2. LOGIC NGÔI SAO (ĐÃ FIX & CÓ HOVER)
         const stars = document.querySelectorAll('.star-widget span');
         const widget = document.getElementById('starWidget');
         const ratingValueInput = document.getElementById('ratingValue');
         const ratingText = document.getElementById('ratingText');
         const ratingLabels = ["Rất tệ", "Tệ", "Bình thường", "Tốt", "Tuyệt vời"];
         
-        // Hàm tô màu sao (Code cũ của bạn bị thiếu hàm này)
         function highlightStars(count) {
             stars.forEach((s, i) => {
-                if (i < count) {
-                    s.classList.add('selected');
-                    s.style.color = "#f1c40f";
-                } else {
-                    s.classList.remove('selected');
-                    s.style.color = "#444";
-                }
+                if (i < count) { s.classList.add('selected'); s.style.color = "#f1c40f"; } 
+                else { s.classList.remove('selected'); s.style.color = "#444"; }
             });
         }
 
-        // Xử lý sự kiện chuột
         stars.forEach((star, index) => {
-            // Rê chuột vào -> Sáng sao
-            star.addEventListener('mouseover', () => {
-                highlightStars(index + 1);
-                ratingText.innerText = ratingLabels[index];
-                ratingText.style.color = "#f1c40f";
-            });
-
-            // Click -> Chọn sao
-            star.addEventListener('click', () => {
-                ratingValueInput.value = index + 1;
-                star.style.transform = "scale(1.3)"; // Hiệu ứng nhún
-                setTimeout(()=> star.style.transform = "scale(1)", 200);
-            });
+            star.addEventListener('mouseover', () => { highlightStars(index + 1); ratingText.innerText = ratingLabels[index]; ratingText.style.color = "#f1c40f"; });
+            star.addEventListener('click', () => { ratingValueInput.value = index + 1; star.style.transform = "scale(1.3)"; setTimeout(()=> star.style.transform = "scale(1)", 200); });
         });
 
-        // Rê chuột ra ngoài -> Trả về trạng thái đã chọn
         widget.addEventListener('mouseleave', () => {
             const currentRating = parseInt(ratingValueInput.value);
-            if (currentRating > 0) {
-                highlightStars(currentRating);
-                ratingText.innerText = ratingLabels[currentRating - 1];
-            } else {
-                highlightStars(0);
-                ratingText.innerText = "Chưa chọn sao";
-                ratingText.style.color = "#888";
-            }
+            if (currentRating > 0) { highlightStars(currentRating); ratingText.innerText = ratingLabels[currentRating - 1]; } 
+            else { highlightStars(0); ratingText.innerText = "Chưa chọn sao"; ratingText.style.color = "#888"; }
         });
 
-        // 3. GỬI ĐÁNH GIÁ
+        // 3. GỬI ĐÁNH GIÁ (CÓ KÈM AVATAR)
         document.getElementById('btnSubmitReview').addEventListener('click', () => {
             if (!currentUser) return;
             const comment = document.getElementById('inputComment').value.trim();
@@ -176,25 +152,38 @@
             const btn = document.getElementById('btnSubmitReview');
             btn.innerText = "Đang gửi..."; btn.disabled = true;
 
-            push(ref(db, 'reviews/' + GAME_ID), {
-                user: currentUser.displayName || currentUser.email.split('@')[0],
-                email: currentUser.email,
-                stars: starsSelected,
-                content: comment,
-                createdAt: new Date().toLocaleString('vi-VN')
-            }).then(() => {
-                document.getElementById('inputComment').value = '';
-                ratingValueInput.value = 0;
-                highlightStars(0); // Reset màu sao về đen
-                ratingText.innerText = "Chưa chọn sao";
-                ratingText.style.color = "#888";
-                alert("Đã gửi đánh giá!");
-            }).catch(() => alert("Lỗi kết nối!")).finally(() => {
-                btn.innerText = "Gửi đánh giá"; btn.disabled = false;
+            // 👇 BƯỚC MỚI: Lấy Avatar của User trước khi lưu comment
+            const userRef = ref(db, 'users/' + currentUser.uid);
+            get(userRef).then((snapshot) => {
+                let userAvatar = ""; // Mặc định không có
+                if (snapshot.exists()) {
+                    const userData = snapshot.val();
+                    if (userData.avatar) userAvatar = userData.avatar;
+                }
+
+                // Sau khi lấy được avatar, tiến hành lưu Comment
+                const reviewsRef = ref(db, 'reviews/' + GAME_ID);
+                push(reviewsRef, {
+                    user: currentUser.displayName || currentUser.email.split('@')[0],
+                    email: currentUser.email,
+                    avatar: userAvatar, // 👇 Lưu avatar vào đây
+                    stars: starsSelected,
+                    content: comment,
+                    createdAt: new Date().toLocaleString('vi-VN')
+                }).then(() => {
+                    document.getElementById('inputComment').value = '';
+                    ratingValueInput.value = 0;
+                    highlightStars(0);
+                    ratingText.innerText = "Chưa chọn sao";
+                    ratingText.style.color = "#888";
+                    alert("Đánh giá thành công!");
+                }).catch(() => alert("Lỗi kết nối!")).finally(() => {
+                    btn.innerText = "Gửi đánh giá"; btn.disabled = false;
+                });
             });
         });
 
-        // 4. LOAD ĐÁNH GIÁ
+        // 4. LOAD ĐÁNH GIÁ (HIỂN THỊ AVATAR THẬT)
         const reviewsRef = ref(db, 'reviews/' + GAME_ID);
         onValue(reviewsRef, (snapshot) => {
             const list = document.getElementById('reviewList');
@@ -204,17 +193,30 @@
                 reviews.forEach(review => {
                     const starString = '★'.repeat(review.stars) + '☆'.repeat(5 - review.stars);
                     const avatarChar = review.user.charAt(0).toUpperCase();
+
+                    // 👇 LOGIC HIỂN THỊ AVATAR
+                    let avatarHTML = "";
+                    if (review.avatar && review.avatar.length > 100) { 
+                        // Nếu có ảnh base64 dài -> Hiện ảnh
+                        avatarHTML = `<img src="${review.avatar}" style="width:35px; height:35px; border-radius:50%; object-fit:cover; border: 2px solid #e74c3c;">`;
+                    } else {
+                        // Nếu không có ảnh -> Hiện chữ cái đầu (như cũ)
+                        avatarHTML = `<div style="width:35px; height:35px; background:#333; border-radius:50%; display:flex; align-items:center; justify-content:center; color:#e74c3c; font-weight:bold; border: 1px solid #555;">${avatarChar}</div>`;
+                    }
+
                     list.innerHTML += `
                         <div class="review-card">
                             <div class="user-header">
                                 <div style="display:flex;align-items:center;gap:10px;">
-                                    <div style="width:30px;height:30px;background:#333;border-radius:50%;display:flex;align-items:center;justify-content:center;color:#e74c3c;font-weight:bold;">${avatarChar}</div>
-                                    <span class="username">${review.user}</span>
+                                    ${avatarHTML} 
+                                    <div>
+                                        <span class="username">${review.user}</span>
+                                        <span class="review-date" style="font-size:0.8em; color:#777;">${review.createdAt}</span>
+                                    </div>
                                 </div>
                                 <span class="rating">${starString}</span>
                             </div>
-                            <span class="review-date">${review.createdAt}</span>
-                            <p class="review-text">${review.content}</p>
+                            <p class="review-text" style="margin-top:10px; padding-left:45px;">${review.content}</p>
                         </div>`;
                 });
             } else {
